root/infra/meilisearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: search
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: 7700
      name: http
  selector:
    app: meilisearch
