root/infra/meilisearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meilisearch
  namespace: search
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/ipwhitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  tls:
    - hosts:
        - search.preprod.qoffice.cloud
      secretName: meilisearch-tls
  rules:
    - host: search.preprod.qoffice.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meilisearch
                port:
                  number: 7700
